# HexChess

./: .gitattributes  .gitignore  CameraFollowing.gd  Cargo.toml  Grid.gd  HexChess.csproj  HexChess.sln  LICENSE  Makefile.toml  Map.gd  Mapping.gd  NPC.gd  Piece.gd  README.md  chess_tileset.tres  map.tscn  menu.tscn  menu_buttons.tres  project.godot  tileset.tres
.import/: 0_tile.png-cc64807e294c166929da9a57fef68ee0.md5  0_tile.png-cc64807e294c166929da9a57fef68ee0.stex  1_tile.png-6db6bf4acbecac39780b6556f1bbc565.md5  1_tile.png-6db6bf4acbecac39780b6556f1bbc565.stex  2_tile.png-726b43c24bd06ec6218bec48b4898521.md5  2_tile.png-726b43c24bd06ec6218bec48b4898521.stex  3_background.png-4d2f775a7686f0b3a6530c87a8286eb6.md5  3_background.png-4d2f775a7686f0b3a6530c87a8286eb6.stex  4_highlight.png-a2af29863497c10176df91077faadca9.md5  4_highlight.png-a2af29863497c10176df91077faadca9.stex  WWT-01.png-a74af26d994adfc547572b5b9c0c4034.md5  WWT-01.png-a74af26d994adfc547572b5b9c0c4034.stex  WWT-02.png-9a9ae8a623554db2531366e8a06b737a.md5  WWT-02.png-9a9ae8a623554db2531366e8a06b737a.stex  WWT-03.png-111a68b27c5234ed5719f8591af32a0c.md5  WWT-03.png-111a68b27c5234ed5719f8591af32a0c.stex  WWT-04.png-f26081179f39965c61294d932b10ab21.md5  WWT-04.png-f26081179f39965c61294d932b10ab21.stex  WWT-05.png-744e3aac04e57d14153c9ab15d0f478b.md5  WWT-05.png-744e3aac04e57d14153c9ab15d0f478b.stex  WWT-06.png-42fd05901daa928f55c39f581f1c698b.md5  (+116 more)
rust/: Cargo.toml
rust/src/: basics.rs  board.rs  engine.rs  initial_positions.rs  lib.rs  mapping.rs  movement.rs  search.rs  turn.rs  variant.rs
(+99 files in other folders)
